@@ -2,6 +2,7 @@ package com.lunawave.restaurantai.controller;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.springframework.ai.chat.client.ChatClient;
@@ -28,45 +29,40 @@ public class AskController {
         @RequestParam String q,
         @RequestParam(required = false) String restaurantId
     ) {
-        // 1️⃣ Retrieve candidate docs from Chroma
         List<Document> docs = vectorStore.similaritySearch(
             SearchRequest.builder()
                 .query(q)
-                .topK(10) // grab a few extra so filtering doesn't empty us out
+                .topK(5)
                 .build()
         );
 
-        // Debug: show everything retrieved
-        if (docs == null || docs.isEmpty()) {
-            System.out.println("DOC: No matching documents found (before filtering).");
+        if (docs.isEmpty()) {
+            System.out.println("DOC: No matching documents found from vector search.");
         } else {
-            docs.forEach(d -> System.out.println("DOC (raw): " + d.getText() + " | meta=" + safeMeta(d)));
+            docs.forEach(d -> {
+                System.out.println("----- RAW DOC -----");
+                System.out.println("TEXT: " + d.getText());
+                System.out.println("META: " + safeMeta(d));
+            });
         }
 
-        // 2️⃣ Optional restaurantId filtering (based on metadata we stored on ingest)
         List<Document> filtered = docs;
-        if (restaurantId != null && !restaurantId.trim().isEmpty() && docs != null) {
+
+        if (restaurantId != null && !restaurantId.isBlank()) {
             String rid = restaurantId.trim();
-            filtered = docs.stream()
+            filtered = filtered.stream()
                 .filter(d -> rid.equalsIgnoreCase(String.valueOf(safeMeta(d).get("restaurantId"))))
                 .toList();
         }
 
-        // Debug: show what's left
-        if (filtered == null || filtered.isEmpty()) {
-            System.out.println("DOC: No matching documents found (after restaurantId filtering). restaurantId=" + restaurantId);
-        } else {
-            filtered.forEach(d -> System.out.println("DOC (kept): " + d.getText()));
+        if (filtered.isEmpty()) {
+            return "I’m sorry, I couldn’t find any restaurant information for that question.";
         }
 
-        // 3️⃣ Build CONTEXT for the LLM
-        String context = (filtered == null || filtered.isEmpty())
-            ? ""
-            : filtered.stream()
-                .map(Document::getText)
-                .collect(Collectors.joining("\n\n---\n\n"));
+        String context = filtered.stream()
+            .map(this::toContextBlock)
+            .collect(Collectors.joining("\n\n---\n\n"));
 
-        // 4️⃣ Friendly host prompt (tone lives here)
         String system = """
             You are a friendly and welcoming restaurant host.
 
@@ -76,11 +72,13 @@ public class AskController {
             - specials
             - restaurant policies
 
-            Be upbeat, warm, and conversational, like a helpful host greeting guests.
+            Be upbeat, warm, and conversational.
             Keep answers short and easy to read.
 
             IMPORTANT RULES:
             - Use ONLY the provided CONTEXT to answer.
+            - Do not combine details from different menu items unless the context clearly shows they belong together.
+            - When mentioning menu items, use the item names exactly as written in the context.
             - If the answer is not in the context, say you’re not sure and offer to check with the staff.
             """;
 
@@ -88,11 +86,10 @@ public class AskController {
             GUEST QUESTION:
             %s
 
-            CONTEXT (restaurant information):
+            CONTEXT:
             %s
-            """.formatted(q, context.isBlank() ? "(no matching restaurant info found)" : context);
+            """.formatted(q, context);
 
-        // 5️⃣ Ask OpenAI with context
         return chatClient
             .prompt()
             .system(system)
@@ -101,8 +98,25 @@ public class AskController {
             .content();
     }
 
+    private String toContextBlock(Document d) {
+        Map<String, Object> meta = safeMeta(d);
+
+        return """
+            DOC_ID: %s
+            TITLE: %s
+            TYPE: %s
+            TEXT: %s
+            METADATA: %s
+            """.formatted(
+            meta.getOrDefault("docId", ""),
+            meta.getOrDefault("title", ""),
+            meta.getOrDefault("type", ""),
+            d.getText(),
+            meta
+        );
+    }
+
     private static Map<String, Object> safeMeta(Document d) {
-        Map<String, Object> meta = d.getMetadata();
-        return meta == null ? Map.of() : meta;
+        return Optional.ofNullable(d.getMetadata()).orElse(Map.of());
     }
 }
